Now stores position of applications and fixed settings page overflow not scrolling

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -317,6 +317,8 @@
    margin: 0.75rem 0.4rem;
 }
 #paper span.link {
+   text-decoration: underline;
+   color: #018281;
    font-weight: bold;
    cursor: pointer;
 }
@@ -340,9 +342,6 @@
    padding: 0 var(--padding);
    display: block;
 }
-.reward-type-box:not(.opened) {
-   cursor: pointer;
-}
 .reward-type-box.opened .reward-box {
    border-color: rgb(221, 228, 129);
    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.35), 0 0 3px 1px rgba(0, 0, 0, 0.3) inset;
@@ -352,20 +351,6 @@
 }
 .reward-type-box.opened .reward-box img {
    opacity: 0.65;
-}
-.reward-type-box:not(.opened):hover .reward-box {
-   border-color: #696969;
-}
-.reward-type-box:not(.opened):hover .reward-text {
-   color: #333;
-}
-.reward-type-box:not(.opened):active .reward-box {
-   border-color: #222;
-   background-image: radial-gradient(rgb(220, 220, 175), rgb(155, 155, 130));
-}
-.reward-type-box:not(.opened):active .reward-text {
-   color: #000;
-   text-shadow: 0 0 1px rgba(0, 0, 0, 0.25);
 }
 .reward-box {
    width: 2rem;
