--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -7,11 +7,15 @@
 
 #settings .main {
    width: 50%;
+   max-height: calc(100% - 5rem);
    padding: 0 0.5rem 0.5rem;
-   margin-left: 50%;
+   /* margin-left: 50%; */
    overflow-y: scroll;
    overflow-x: hidden;
-   transform: translate(-50%, 5rem);
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
 }
 .ct-95 #settings .main {
    background-color: #ccc;
@@ -20,24 +24,34 @@
    border-left-color: #fff;
    border-right-color: #444;
    border-bottom-color: #444;
+   box-shadow: 10px 10px 0 0 rgba(0, 0, 0, 0.2);
 }
-
-#settings .main :is(h1, h2) {
+.ct-95 #settings h1 {
+   font-size: 1.7rem;
+   text-align: center;
+}
+.ct-95 #settings h2 {
+   font-size: 1.3rem;
+}
+#settings :is(h1, h2) {
    margin: 0.3rem 0;
 }
-
-#settings .main .section {
+#settings :is(.left-column, .right-column) {
+   width: 50%;
+   display: inline-block;
+}
+#settings .section {
    width: calc(100% - 4rem);
-   background-color: rgb(240, 240, 230);
+   background-color: #ddd;
    border: 2px solid;
    border-top-color: #fff;
    border-left-color: #fff;
-   border-right-color: rgb(150, 150, 135);
-   border-bottom-color: rgb(150, 150, 135);
+   border-right-color: #666;
+   border-bottom-color: #666;
    padding: 0.3rem 0.5rem;
    margin: 0.5rem 0 0.5rem 50%;
    transform: translateX(-50%);
-   box-shadow: 3px 3px 0 0 #999;
+   box-shadow: 4px 4px 0 0 rgba(0, 0, 0, 0.2);
 }
 #settings .main .section .label {
    float: left;
